--- a/StatsTracker/GameDetailPage.xaml
+++ b/StatsTracker/GameDetailPage.xaml
@@ -10,9 +10,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Controls="using:Callisto.Controls"
-    xmlns:WinRtBehaviors="using:WinRtBehaviors"
-    xmlns:Win8nl_Behavior="using:Win8nl.Behaviors"
-    xmlns:MetroEventToCommand="using:MetroEventToCommand"
     d:DataContext="{d:DesignInstance Type=data:GameDesignTimeViewModel, IsDesignTimeCreatable=True}"
     mc:Ignorable="d">
 
@@ -38,6 +35,8 @@
                     <Button Style="{StaticResource SortByNumberAppBarButtonStyle}" Command="{Binding SortPlayersByNumber}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <!--<Button Style="{StaticResource EmailGameAppBarButtonStyle}" Click="OnEmailButton_Click"/>-->
+                    <Button Style="{StaticResource EmailGameAppBarButtonStyle}" Command="{Binding EmailGame}"/>
                     <Button Style="{StaticResource SaveGameAppBarButtonStyle}" Command="{Binding SaveGame}"/>
                 </StackPanel>
             </Grid>
@@ -135,7 +134,6 @@
 
         <Controls:CustomDialog x:Name="SelectPlayersGameDialog" HorizontalAlignment="Left" Title="Select Players" Background="White" VerticalAlignment="Top" Height="500" IsOpen="{Binding IsSelectPlayersDialogOpen, Mode=TwoWay}">
             <StackPanel>
-                <!--ItemsSource="{Binding PlayerStats}"-->
                 <GridView x:Name="playerSelectionGrid"  SelectionChanged="OnPlayerSelectionGrid_SelectionChanged" SelectionMode="Multiple" Height="300">
                     <GridView.ItemsPanel>
                         <ItemsPanelTemplate>
