--- a/StatsTracker/App.xaml
+++ b/StatsTracker/App.xaml
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Application xmlns:local="using:StatsTracker" xmlns:localData="using:StatsTracker.Data" RequestedTheme="Light" xmlns:common="using:StatsTracker.Common" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Class="StatsTracker.App" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:vm="clr-namespace:StatsTracker.ViewModel" mc:Ignorable="d">
+<Application xmlns:local="using:StatsTracker" xmlns:localData="using:StatsTracker.Data" 
+             RequestedTheme="Light" 
+             xmlns:common="using:StatsTracker.Common" 
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             x:Class="StatsTracker.App" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:vm="clr-namespace:StatsTracker.ViewModel" 
+             mc:Ignorable="d">
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
@@ -11,7 +20,8 @@
       </ResourceDictionary.MergedDictionaries>
       <!-- Application-specific resources -->
       <String p7:Key="AppName" xmlns:p7="http://schemas.microsoft.com/winfx/2006/xaml" xmlns="http://schemas.microsoft.com/winfx/2006/xaml">Stats Tracker</String>
-      <common:BooleanToVisibilityConverter p7:Key="BooleanToVisibilityConverter" xmlns:p7="http://schemas.microsoft.com/winfx/2006/xaml" />
+            <common:BooleanToVisibilityConverter p7:Key="BooleanToVisibilityConverter" xmlns:p7="http://schemas.microsoft.com/winfx/2006/xaml" />
+            <common:BooleanNegationConverter p7:Key="BooleanNegationConverter" xmlns:p7="http://schemas.microsoft.com/winfx/2006/xaml" />
       <!--<vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />-->
     </ResourceDictionary>
   </Application.Resources>
